--- a/profile.html
+++ b/profile.html
@@ -231,9 +231,33 @@ footer {
 <!-- Хедер -->
 <div id="header-placeholder"></div>
 <script>
-  fetch("header.html").then(r=>r.text()).then(html=>{
-    document.getElementById("header-placeholder").innerHTML = html;
-  });
+  // 🟢 Функція для активації пошуку після вставки хедера
+  function bindHeaderSearch() {
+    const input = document.getElementById("search-input");
+    if (!input) return;
+
+    input.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") {
+        e.preventDefault();
+        const query = input.value.trim();
+        if (query.length > 1) {
+          localStorage.setItem("searchQuery", query);
+          window.location.href = "/search.html";
+        }
+      }
+    });
+  }
+
+  // 🟢 Завантажуємо header.html і активуємо пошук після вставки
+  fetch("header.html")
+    .then(r => r.text())
+    .then(html => {
+      document.getElementById("header-placeholder").innerHTML = html;
+      bindHeaderSearch(); // активуємо пошук
+    })
+    .catch(err => console.error("Помилка завантаження хедера:", err));
+</script>
+
 
       
 </script>
