--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
 
   <div class="slider-row" id="sliderRow"></div>
 </section>
+<!-- === TELEGRAM LINKS === -->
+<section class="telegram-links" style="text-align:center; margin: 40px 0;">
+  <h2 style="color:#00fff2; margin-bottom:15px;">🎬 Ми також у Telegram</h2>
+  <div class="tg-buttons">
+    <a href="https://t.me/RelaxBox_UA_bot" target="_blank" class="tg-btn bot">🤖 Відкрити Бота</a>
+    <a href="https://t.me/RelaxBoxMedia2" target="_blank" class="tg-btn channel">📢 Наш Канал</a>
+  </div>
+</section>
 
 <!-- JS керування слайдером -->
 <script>
@@ -447,6 +455,7 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 <script src="auth.js"></script>
 </body>
 </html>
+
 
 
 
