--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
 
   <div class="slider-row" id="sliderRow"></div>
 </section>
+<!-- === TELEGRAM MINI-BAR === -->
+<section class="telegram-bar">
+  <div class="tg-inner">
+    <span class="tg-text">🎬 Приєднуйся до нас у Telegram:</span>
+    <div class="tg-links">
+      <a href="https://t.me/RelaxBox_UA_bot" target="_blank" class="tg-btn-mini bot">🤖 Бот</a>
+      <a href="https://t.me/RelaxBoxMedia2" target="_blank" class="tg-btn-mini channel">📢 Канал</a>
+    </div>
+  </div>
+</section>
 
 <!-- JS керування слайдером -->
 <script>
@@ -447,6 +457,7 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 <script src="auth.js"></script>
 </body>
 </html>
+
 
 
 
