--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ const telegramBlock = `
       <p>Отримуй новинки першими 👇</p>
       <div class="tg-links">
         <a href="https://t.me/RelaxBox_UA_bot" target="_blank" class="tg-btn bot">🤖 Відкрити Бота</a>
-        <a href="https://t.me/RelaxBoxMedia2" target="_blank" class="tg-btn channel">📢 Канал</a>
+        <a href="https://t.me/KinoTochkaUA" target="_blank" class="tg-btn channel">📢 Канал</a>
       </div>
     </div>
   </div>
