--- a/bookmarks.html
+++ b/bookmarks.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Мої закладки — KinoSite</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-responsive.css">
   <style>
     .bookmark-grid {
       display: flex; flex-wrap: wrap; gap: 20px; padding: 20px;
