--- a/category.html
+++ b/category.html
@@ -6,6 +6,7 @@
   <title>Relax Kino — Категорія</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <link rel="stylesheet" href="style-responsive.css" />
   <style>
     body { background: #000; color: #fff; font-family: "Poppins", sans-serif; }
     h1 {
