--- a/collection.html
+++ b/collection.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Збірка — KinoSite</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style-responsive.css" />
 </head>
 <body>
 
