--- a/collections.html
+++ b/collections.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🎞️ Збірки фільмів — KinoSite</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style-responsive.css" />
 </head>
 <body>
 
