--- a/new.html
+++ b/new.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🌟 Новинки — KinoSite</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style-responsive.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
   <style>
