--- a/header.html
+++ b/header.html
@@ -5,192 +5,90 @@
       <a href="/index.html">
         <img src="logo.png" alt="Relax Logo" class="nav-logo" />
       </a>
-
       <a href="/index.html" class="active">Головна</a>
 
-      <!-- === МЕНЮ ФІЛЬМИ === -->
-      <div class="dropdown">
-        <a href="#" class="menu-films">Фільми</a>
-        <div class="mega-menu">
-          <div class="genres">
-            <a href="/category.html?type=Фільм&genre=Бойовик">Бойовик</a>
-            <a href="/category.html?type=Фільм&genre=Комедія">Комедія</a>
-            <a href="/category.html?type=Фільм&genre=Драма">Драма</a>
-            <a href="/category.html?type=Фільм&genre=Фантастика">Фантастика</a>
-            <a href="/category.html?type=Фільм&genre=Трилер">Трилер</a>
-            <a href="/category.html?type=Фільм&genre=Жахи">Жахи</a>
-            <a href="/category.html?type=Фільм&genre=Фентезі">Фентезі</a>
-          </div>
-        </div>
-      </div>
-
-      <!-- === МЕНЮ СЕРІАЛИ === -->
-      <div class="dropdown">
-        <a href="#" class="menu-series">Серіали</a>
-        <div class="mega-menu mega-series">
-          <div class="genres">
-            <a href="/category.html?type=Серіал&genre=Драматичні">Драматичні</a>
-            <a href="/category.html?type=Серіал&genre=Комедійні">Комедійні</a>
-            <a href="/category.html?type=Серіал&genre=Трилери">Трилери</a>
-            <a href="/category.html?type=Серіал&genre=Історичні">Історичні</a>
-            <a href="/category.html?type=Серіал&genre=Фантастичні">Фантастичні</a>
-          </div>
-        </div>
-      </div>
-
-      <a href="/category.html?type=Мультфільм">Мультфільми</a>
-      <a href="/category.html?type=Мультсеріал">Мультсеріали</a>
-      <a href="/collections.html">Збірки</a>
-      <a href="/new.html">Новинки</a>
-
-      <!-- 🔹 Тепер пошук і кабінет тут, як було -->
-      <input type="text" id="search-input" placeholder="Пошук…" class="search" />
-      <a href="/profile.html" class="profile-btn">👑 Мій кабінет</a>
-    </nav>
+<!-- === МЕНЮ ФІЛЬМИ === -->
+<div class="dropdown">
+  <a href="#" class="menu-films">Фільми</a>
+  <div class="mega-menu">
+    <div class="genres">
+      <a href="/category.html?type=Фільм&genre=Біографія">Біографія</a>
+      <a href="/category.html?type=Фільм&genre=Бойовик">Бойовик</a>
+      <a href="/category.html?type=Фільм&genre=Вестерн">Вестерн</a>
+      <a href="/category.html?type=Фільм&genre=Військовий">Військовий</a>
+      <a href="/category.html?type=Фільм&genre=Детектив">Детектив</a>
+      <a href="/category.html?type=Фільм&genre=Документальний">Документальний</a>
+      <a href="/category.html?type=Фільм&genre=Драма">Драма</a>
+      <a href="/category.html?type=Фільм&genre=Історія">Історія</a>
+      <a href="/category.html?type=Фільм&genre=Комедія">Комедія</a>
+      <a href="/category.html?type=Фільм&genre=Кримінал">Кримінал</a>
+      <a href="/category.html?type=Фільм&genre=Мелодрама">Мелодрама</a>
+      <a href="/category.html?type=Фільм&genre=Містика">Містика</a>
+      <a href="/category.html?type=Фільм&genre=Музика">Музика</a>
+      <a href="/category.html?type=Фільм&genre=Мюзикл">Мюзикл</a>
+      <a href="/category.html?type=Фільм&genre=Пригоди">Пригоди</a>
+      <a href="/category.html?type=Фільм&genre=Сімейний">Сімейний</a>
+      <a href="/category.html?type=Фільм&genre=Спорт">Спорт</a>
+      <a href="/category.html?type=Фільм&genre=Трилер">Трилер</a>
+      <a href="/category.html?type=Фільм&genre=Жахи">Жахи</a>
+      <a href="/category.html?type=Фільм&genre=Фантастика">Фантастика</a>
+      <a href="/category.html?type=Фільм&genre=Фентезі">Фентезі</a>
+      <a href="/category.html?type=Фільм&genre=Короткометражні">Короткометражні</a>
+    </div>
   </div>
-</header>
+</div>
 
-<!-- === JS пошуку === -->
+<!-- === МЕНЮ СЕРІАЛИ === -->
+<div class="dropdown">
+  <a href="#" class="menu-series">Серіали</a>
+  <div class="mega-menu mega-series">
+    <div class="genres">
+      <a href="/category.html?type=Серіал&genre=Мелодраматичні">Мелодраматичні</a>
+      <a href="/category.html?type=Серіал&genre=Детективні">Детективні</a>
+      <a href="/category.html?type=Серіал&genre=Драматичні">Драматичні</a>
+      <a href="/category.html?type=Серіал&genre=Комедійні">Комедійні</a>
+      <a href="/category.html?type=Серіал&genre=Історичні">Історичні</a>
+      <a href="/category.html?type=Серіал&genre=Фантастичні">Фантастичні</a>
+      <a href="/category.html?type=Серіал&genre=Турецькі">Турецькі</a>
+      <a href="/category.html?type=Серіал&genre=Пригодницькі">Пригодницькі</a>
+      <a href="/category.html?type=Серіал&genre=Трилери">Трилери (серіали)</a>
+      <a href="/category.html?type=Серіал&genre=Жахи">Жахи (серіали)</a>
+      <a href="/category.html?type=Серіал&genre=Дорами">Дорами</a>
+      <a href="/category.html?type=Серіал&genre=Міні серіали">Міні серіали</a>
+    </div>
+  </div>
+</div>
+
+<a href="/category.html?type=Мультфільм">Мультфільми</a>
+<a href="/category.html?type=Мультсеріал">Мультсеріали</a>
+
+<a href="/new.html">Новинки</a>
+<a href="/collections.html">Збірки фільмів</a>
+</nav>
+
+<!-- === ПРАВА ЧАСТИНА === -->
+<div class="top-right">
+  <input type="text" id="search-input" placeholder="Пошук…" class="search" />
+  <a href="/profile.html" class="profile-btn">👑 Мій кабінет</a>
+</div>
+</div>
+</header>
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const input = document.getElementById("search-input");
   if (!input) return;
-  input.addEventListener("keypress", e => {
+
+  input.addEventListener("keypress", function (e) {
     if (e.key === "Enter") {
       e.preventDefault();
       const query = input.value.trim();
       if (query.length > 1) {
+        // зберігаємо запит у localStorage
         localStorage.setItem("searchQuery", query);
+        // переходимо на сторінку пошуку
         window.location.href = "/search.html";
       }
     }
   });
 });
 </script>
-
-<style>
-/* === ВІДНОВЛЕНА ШАПКА === */
-header {
-  background: #000;
-  border-bottom: 1px solid rgba(0,255,255,0.08);
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
-
-.topbar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 12px 20px;
-}
-
-.main-nav {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.nav-logo {
-  height: 42px;
-  transition: transform 0.2s ease;
-}
-.nav-logo:hover { transform: scale(1.05); }
-
-.main-nav a {
-  color: #e4e4e4;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 15px;
-  transition: color 0.2s ease;
-}
-.main-nav a:hover {
-  color: #00fff2;
-}
-
-/* Пошук + Кабінет */
-.search {
-  padding: 6px 10px;
-  border-radius: 8px;
-  border: 1px solid rgba(255,255,255,.2);
-  background: #0a0a0a;
-  color: #fff;
-  width: 180px;
-  transition: all 0.25s ease;
-}
-.search:focus {
-  outline: none;
-  border-color: #00fff2;
-  box-shadow: 0 0 8px rgba(0,255,255,.25);
-}
-
-.profile-btn {
-  background: transparent;
-  border: 1px solid rgba(0,255,255,0.3);
-  color: #00fff2;
-  font-weight: 600;
-  padding: 6px 14px;
-  border-radius: 8px;
-  text-decoration: none;
-  transition: all 0.25s ease;
-}
-.profile-btn:hover {
-  background: rgba(0,255,255,0.1);
-  box-shadow: 0 0 12px rgba(0,255,255,0.25);
-}
-
-/* === МЕГА-МЕНЮ === */
-.mega-menu,
-.mega-series {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 100%;
-  background: #0b0b0b;
-  border: 1px solid rgba(0,255,255,0.1);
-  border-radius: 12px;
-  padding: 15px 20px;
-  box-shadow: 0 0 25px rgba(0,255,255,0.1);
-  display: none;
-  z-index: 500;
-  text-align: center;
-}
-.dropdown:hover .mega-menu,
-.dropdown:hover .mega-series {
-  display: block;
-}
-
-.genres {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 12px;
-  justify-content: center;
-}
-.genres a {
-  color: #e4e4e4;
-  background: rgba(255,255,255,0.05);
-  padding: 6px 10px;
-  border-radius: 8px;
-  text-decoration: none;
-  font-size: 14px;
-  transition: all 0.2s ease;
-}
-.genres a:hover {
-  background: rgba(0,255,255,0.2);
-  color: #fff;
-}
-
-/* === адаптив === */
-@media (max-width: 700px) {
-  .main-nav {
-    flex-direction: column;
-    gap: 10px;
-  }
-  .search {
-    width: 100%;
-    max-width: 320px;
-  }
-}
-</style>
