--- a/profile.html
+++ b/profile.html
@@ -619,9 +619,15 @@ function getWebId() {
 
 // ⚙️ Показує потрібну кнопку (tg / web)
 function updateProUI() {
-  // За замовчуванням обидві кнопки приховані
+  // За замовчуванням приховуємо
   document.getElementById("btn-paid-tg").style.display  = "none";
   document.getElementById("btn-paid-web").style.display = "none";
+
+  // Якщо користувач уже натиснув оплату — залишаємо видимими
+  if (localStorage.getItem("pro_payment_started") === "true") {
+    document.getElementById("btn-paid-tg").style.display  = "inline-block";
+    document.getElementById("btn-paid-web").style.display = "inline-block";
+  }
 
   // Показуємо кнопку "Отримати PRO"
   const getProBtn = document.getElementById("get-pro");
@@ -728,14 +734,18 @@ btnClose.addEventListener("click", () => {
 // 3️⃣ Підтвердження → відкриваємо Monobank і показуємо кнопку "Я оплатив"
 btnConfirmPay.addEventListener("click", () => {
   modal.style.display = "none";
+  localStorage.setItem("pro_payment_started", "true"); // 👈 додай цю стрічку
 
   // відкриваємо Monobank банку у новій вкладці
   const monoUrl = "https://send.monobank.ua/jar/8FbfB4fY6S";
   window.open(monoUrl, "_blank");
 
-  // після відкриття — показуємо кнопку "Я оплатив"
-  document.getElementById("btn-paid-tg").style.display = "inline-block";
-  document.getElementById("btn-paid-web").style.display = "inline-block";
+ // після відкриття — показуємо кнопки "Я оплатив"
+const btnTg = document.getElementById("btn-paid-tg");
+const btnWeb = document.getElementById("btn-paid-web");
+if (btnTg) btnTg.style.removeProperty("display");
+if (btnWeb) btnWeb.style.removeProperty("display");
+
 
   alert("💳 Оплата відкрилась у новій вкладці.\nПісля переказу натисніть «Я оплатив(ла)»!");
 });
