--- a/profile.html
+++ b/profile.html
@@ -273,7 +273,7 @@ footer {
 }
 .pro-actions #btn-paid-tg,
 .pro-actions #btn-paid-web {
-  display: none !important;
+  display: none; /* без !important */
 }
 </style>
 
