--- a/profile.html
+++ b/profile.html
@@ -789,7 +789,12 @@ window.addEventListener("DOMContentLoaded", () => {
 <div id="proModal" class="modal">
   <div class="modal-content">
     <h3>💎 Отримати PRO доступ</h3>
-    <p>Після оплати через Monobank обовʼязково натисніть кнопку <b>«Я оплатив(ла)»</b>, щоб адміністратор підтвердив ваш PRO.</p>
+    <p>
+     Після оплати через Monobank обовʼязково натисніть кнопку 
+     <b style="color:#ff4bf2; text-shadow:0 0 6px rgba(255,75,242,0.6);">
+       «Я оплатив(ла)»
+     </b>, щоб адміністратор підтвердив ваш PRO.
+   </p>
     <div class="modal-actions">
       <button id="confirmPay" class="btn btn-primary">Перейти до оплати 💳</button>
       <button id="closeModal" class="btn btn-ghost">Скасувати</button>
