--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 <meta http-equiv="Content-Security-Policy"
       content="default-src * 'self' data: blob: https: http:;
                script-src 'self' 'unsafe-inline' 'unsafe-eval' https://telegram.org https://oauth.telegram.org https://cdn.jsdelivr.net;
-               frame-src https://oauth.telegram.org https://kino-site.pages.dev;
+               frame-src https://oauth.telegram.org https://kino-site.top;
                connect-src *;
                style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
                font-src https://fonts.gstatic.com;">
