--- a/profile.html
+++ b/profile.html
@@ -376,9 +376,11 @@ footer {
           data-radius="8"
           data-userpic="true"
           data-request-access="write"
+          data-auth-url="https://kino-site.top/profile"
           data-onauth="onTelegramAuth(user)">
   </script>
 </div>
+
 
   </div>
 </main>
