--- a/profile.html
+++ b/profile.html
@@ -527,7 +527,7 @@ supabase.auth.onAuthStateChange(async (event, session) => {
 
 
     try {
-      const res = await fetch(`${APPS_SCRIPT_URL}?user_id=${encodeURIComponent(user.id)}`);
+      const res = await fetch(`${window.APPS_SCRIPT_URL}?user_id=${encodeURIComponent(user.id)}`)
 
       const json = await res.json();
       if (json.isPro) {
@@ -641,6 +641,10 @@ if (msgBtn && msgCard) {
   });
 }
 
+<script>
+  // 🔗 Новий Apps Script для перевірки PRO
+  window.APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxcNd2wZwrtPm4jk1OdD41jSB_fUd6GTvZ9uFafnxfVTOA_VdbHjtk6l-crMov5qeLHzQ/exec";
+</script>
 
 </script>
 <script src="auth.js"></script>
@@ -754,7 +758,7 @@ async function checkProStatus() {
   const statusEl = document.getElementById("pro-status-text");
 
   try {
-    const res = await fetch(`${APPS_SCRIPT_URL}?user_id=${id}`);
+    const res = await fetch(`${window.APPS_SCRIPT_URL}?user_id=${encodeURIComponent(user.id)}`)
     const data = await res.json();
 
     if (data?.ok && data?.isPro) {
