--- a/profile.html
+++ b/profile.html
@@ -543,7 +543,8 @@ supabase.auth.onAuthStateChange(async (event, session) => {
 
 
     try {
-      const res = await fetch(`${window.APPS_SCRIPT_URL}?user_id=${encodeURIComponent(id)}`);
+      const res = await fetch(`${window.APPS_SCRIPT_URL}?user_id=${encodeURIComponent(user.id)}`);
+
       const json = await res.json();
       if (json.isPro) {
         const d = json.expireDate?.split("T")[0]?.split("-").reverse().join(".");
@@ -767,7 +768,8 @@ async function checkProStatus() {
   const statusEl = document.getElementById("pro-status-text");
 
   try {
-    const res = await fetch(`${window.APPS_SCRIPT_URL}?user_id=${encodeURIComponent(id)}`);
+    const res = await fetch(`${window.APPS_SCRIPT_URL}?user_id=${encodeURIComponent(user.id)}`);
+
     const data = await res.json();
 
     if (data?.ok && data?.isPro) {
